# nanobot

./: .env.example  Cargo.toml  README.md  build.rs  runnable.rs
migrations/20160819203016_create_members/: up.sql
migrations/20160819203035_create_users/: up.sql
migrations/20160819203043_create_reminders/: up.sql
migrations/20160819203058_create_tags/: up.sql
migrations/20160819203128_create_guilds/: up.sql
migrations/20160819203130_create_channels/: up.sql
migrations/20160819203140_create_music_requests/: down.sql  up.sql
migrations/20160819203304_create_configs/: up.sql
migrations/20160820140732_create_quotes/: up.sql
src/: error.rs  event.rs  main.in.rs  main.rs  models.rs  prelude.rs  schema.rs  store.rs  utils.rs
src/bot/: config.rs  event_counter.rs  mod.rs  uptime.rs  utils.rs
src/bot/plugins/: admin.rs  config.rs  conversation.rs  meta.rs  misc.rs  mod.rs  music.rs  pic.rs  random.rs  stats.rs  tags.rs  tv.rs
src/commands/: conversation.rs  media.rs  meta.rs  misc.rs  mod.rs  owner.rs  random.rs
src/ext/: google_maps.rs  mod.rs  youtube_dl.rs
src/ext/commands/: context.rs  mod.rs
src/misc/: mod.rs  uptime.rs
