[package]
name = "nanobot"
version = "0.1.0"
authors = ["Austin Hellyer <hello@austinhellyer.me>"]

[dependencies]
chrono = "0.2"
dotenv = "0.8"
env_logger = "0.3"
darksky = "0.5"
diesel = "0.8"
hyper = ">= 0.8"
kitsu_io = { git = "https://github.com/zeyla/kitsu.rs" }
lazy_static = "0.1"
log = "0.3"
psutil = "1.0"
rand = "0.3"
regex = "0.1"
serde_json = "0.8"
serde = "0.8"
#serenity = { git = "https://github.com/zeyla/serenity.git" }
serenity = { path = "../serenity.rs" }
typemap = "0.3"
urbandictionary = "0.1"
