[package]
name = "nanobot"
version = "0.1.0"
authors = ["Zeyla Hellyer <zey@zey.moe>"]

[dependencies]
chrono = "0.4"
dotenv = "0.9"
env_logger = "0.4"
darksky = { git = "https://github.com/zeyla/darksky.rs" }
hyper = "0.10"
kitsu_io = { features = ["reqwest-support"], git = "https://github.com/zeyla/kitsu.rs" }
lazy_static = "0.2"
log = "0.3"
psutil = "1.1"
rand = "0.3"
regex = "0.2"
reqwest = "~0.8"
serde_json = "1.0"
serde = "1.0"
serenity = { branch = "v0.5.0", git = "https://github.com/zeyla/serenity" }
typemap = "0.3"
urbandictionary = { git = "https://github.com/zeyla/urbandictionary.rs" }
